wxc/include/ewxw/wxc_glue.h



/* wxWindowDisabler */
TClassDef(wxWindowDisabler)

/* wxWizard */
TClassDefExtend(wxWizard,wxDialog)
void       wxWizard_Chain( TClass(wxWizardPageSimple) f, TClass(wxWizardPageSimple) s );

TClass(wxWizard) wxWizard_Create( TClass(wxWindow) _prt, int _id, TStringVoid _txt, TClass(wxBitmap) _bmp, TRect(_lft,_top,_wdt,_hgt) );

TClass(wxWizardPage) wxWizard_GetCurrentPage( TSelf(wxWizard) _obj );

void       wxWizard_GetPageSize( TSelf(wxWizard) _obj, TSizeOutVoid(_w,_h) );

int        wxWizard_RunWizard( TSelf(wxWizard) _obj, TClass(wxWizardPage) firstPage );

void       wxWizard_SetPageSize( TSelf(wxWizard) _obj, TSize(w,h) );


/* wxWizardEvent */
TClassDefExtend(wxWizardEvent,wxNotifyEvent)
int        wxWizardEvent_GetDirection( TSelf(wxWizardEvent) _obj );

void       wxWizardPageSimple_GetBitmap( TSelf(wxWizardPageSimple) _obj, TClassRef(wxBitmap) _ref );

TClass(wxWizardPageSimple) wxWizardPageSimple_GetNext( TSelf(wxWizardPageSimple) _obj );

TClass(wxWizardPageSimple) wxWizardPageSimple_GetPrev( TSelf(wxWizardPageSimple) _obj );

void       wxWizardPageSimple_SetNext( TSelf(wxWizardPageSimple) _obj, TClass(wxWizardPageSimple) next );

void       wxWizardPageSimple_SetPrev( TSelf(wxWizardPageSimple) _obj, TClass(wxWizardPageSimple) prev );